--- a/package.json
+++ b/package.json
@@ -91,7 +91,10 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.3"
+    "@types/styled-components": "^5.1.3",
+    "svg-sprite-loader": "^5.0.0",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1"
   },
   "jest": {
     "roots": [
